--- a/WunderTest/Common/Storyboards/Main.storyboard
+++ b/WunderTest/Common/Storyboards/Main.storyboard
@@ -67,6 +67,10 @@
                                 <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="JAq-Zz-3v7" id="aBp-cI-5cP"/>
+                                    <outlet property="delegate" destination="JAq-Zz-3v7" id="Qld-lb-nR5"/>
+                                </connections>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -78,6 +82,9 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="ctH-p0-g2g"/>
                     </view>
+                    <connections>
+                        <outlet property="tableView" destination="t6c-Bv-Kvv" id="Pqe-AX-H9a"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="VWB-qF-Kj2" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
